# rust-base64-resolver-gen

./: .gitignore  CONFIG.md  Cargo.toml  README.md  config.toml  example.config.toml
src/: main.rs  templates.rs
src/templates/: base.html  explore.html  index.html  upload.html
