[package]
name = "rust_base64_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
mime = "0.3"
percent-encoding = "2.1"
uuid = { version = "1.3", features = ["v4"] }
futures = "0.3"
serde_json = "1.0"
lru = "0.12"
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
tokio = { version = "1.0", features = ["full"] }
md5 = "0.7"
config = "0.14"
log = "0.4"
env_logger = "0.10"
